<resources>
    <string name="app_name">MyItime</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_senior">Senior</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_help">helpandfeedback</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>
