<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_time">

    <fragment
        android:id="@+id/nav_time"
        android:name="com.example.myitime.ui.time.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_time" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.myitime.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.myitime.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.myitime.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_senior"
        android:name="com.example.myitime.ui.senior.SeniorFragment"
        android:label="@string/menu_senior"
        tools:layout="@layout/fragment_senior" />
    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.myitime.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.myitime.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.myitime.ui.helpandfeedback.HelpandfeedbackFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_helpandfeedback" />
</navigation>